force-app/main/default/objects/Knowledge__kav/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <description>Acronym (if applicable, optional): BalSh</description>
    <inlineHelpText>Enter the standard acronym associated with this topic, if applicable (e.g., BalSh). Maximum 10 characters.</inlineHelpText>
    <label>Acronym</label>
    <length>10</length>
    <type>Text</type>
</CustomField>