force-app/main/default/objects/Knowledge__kav/fields/Considerations__c.field-meta.xml
<CustomField>
    <fullName>Considerations__c</fullName>
    <description>Considerations (optional - edge cases or important notes)</description>
    <inlineHelpText>Detail any edge cases, exceptions, or important warnings agents must be aware of before applying the resolution.</inlineHelpText>
    <label>Considerations</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>