force-app/main/default/objects/Knowledge__kav/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <description>Definition: A summary of all assets and liabilities at a point in time; one of the reports provided to Full Service clients monthly by the bookkeeping team; one of the reports provided by the bookkeeping team to the tax preparers to tax prep</description>
    <inlineHelpText>Provide a clear, concise explanation or meaning of the term, concept, or metric.</inlineHelpText>
    <label>Definition</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>