force-app/main/default/objects/Knowledge__kav/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details (expanded explanation)</description>
    <inlineHelpText>Details (expanded explanation)</inlineHelpText>
    <label>Details</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>