force-app/main/default/objects/Knowledge__kav/fields/In_Review__c.field-meta.xml
<CustomField>
    <fullName>In_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Knowledge Article is currently undergoing editorial or technical review.</description>
    <label>In Review</label>
    <type>Checkbox</type>
</CustomField>