force-app/main/default/objects/Knowledge__kav/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <inlineHelpText>Describe the issue, symptoms, or exact error messages the customer is experiencing. Include common keywords users might search for.</inlineHelpText>
    <label>Problem</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>