force-app/main/default/objects/Knowledge__kav/fields/Related_Articles__c.field-meta.xml
<CustomField>
    <fullName>Related_Articles__c</fullName>
    <inlineHelpText>Use the smart link approach in a Rich Text Area (RTA) field to add multiple related articles</inlineHelpText>
    <label>Related Articles</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>