force-app/main/default/objects/Knowledge__kav/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <inlineHelpText>Provide clear, step-by-step instructions to resolve the issue or fulfill the request. Use numbered lists for sequential steps.</inlineHelpText>
    <label>Resolution</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>