force-app/main/default/objects/Knowledge__kav/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Tracks the current state of a Knowledge Article within the custom approval lifecycle. This field is updated automatically by Approval Processes and Flows to manage article visibility and workflow transitions</description>
    <inlineHelpText>Indicates where this article is in the review process. Articles must reach the &apos;Approved&apos; stage before they can be published to the Help Center or internal channels.</inlineHelpText>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In-Review</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
                <isActive>false</isActive>
                <label>Published</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>