force-app/main/default/objects/Knowledge__kav/fields/View_Article__c.field-meta.xml
<CustomField>
    <fullName>View_Article__c</fullName>
    <description>A formula field that generates a dynamic hyperlink to the Knowledge Article record. This is specifically designed for use on Approval Request page layouts to allow approvers to quickly navigate to the full article content with a single click.</description>
    <formula>HYPERLINK(
  LEFT($Api.Partner_Server_URL_580, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_580)) &amp; Id, 
  &quot;View Knowledge Article&quot;, 
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click this link to open the Knowledge Article record in a new tab for review before approving or rejecting.</inlineHelpText>
    <label>View Article</label>
    <type>Text</type>
</CustomField>