force-app/main/default/objects/Knowledge__kav/fields/What_Happens_Next__c.field-meta.xml
<CustomField>
    <fullName>What_Happens_Next__c</fullName>
    <label>What Happens Next?</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>