force-app/main/default/objects/Knowledge__kav/recordTypes/FAQ.recordType-meta.xml
<RecordType>
    <fullName>FAQ</fullName>
    <active>true</active>
    <description>FAQ: Many questions need quick factual answers, not procedural steps.</description>
    <label>FAQ</label>
</RecordType>