force-app/main/default/objects/Knowledge__kav/recordTypes/Glossary.recordType-meta.xml
<RecordType>
    <fullName>Glossary</fullName>
    <active>true</active>
    <description>&quot;Glossary&quot; for short reference entries.These are definitions and key terms</description>
    <label>Glossary</label>
</RecordType>