force-app/main/default/objects/Knowledge__kav/recordTypes/How_To.recordType-meta.xml
<RecordType>
    <fullName>How_To</fullName>
    <active>true</active>
    <description>Provide step-by-step instructions for completing a specific task or process.</description>
    <label>How-To</label>
</RecordType>