force-app/main/default/objects/Knowledge__kav/listViews/FAQ_Articles.listView-meta.xml
<ListView>
    <fullName>FAQ_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>Stage__c</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.FAQ</value>
    </filters>
    <label>FAQ Articles</label>
</ListView>